# cognition-lattice

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  TESTING.md  docker-compose.yml  package.json  project.yaml  pyproject.toml  requirements.in  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
assets/: README.md
ci/: README.md
configs/: README.md
configs/manifests/: echo_agent.json
data/: README.md
docs/: README.md  vision.md
docs/adr/: 0001-repository-structure.md
examples/: echo_agent.py
infra/: README.md
scripts/: bootstrap  build  check  clean  coverage  dev  e2e  ensure_spdx_headers.py  fmt  gen-docs  lint  migrate  package  release  sbom  security-scan  test  typecheck  update-deps
scripts/windows/: bootstrap.ps1  build.ps1  check.ps1  clean.ps1  coverage.ps1  dev.ps1  e2e.ps1  fmt.ps1  gen-docs.ps1  lint.ps1  migrate.ps1  package.ps1  release.ps1  sbom.ps1  security-scan.ps1  test.ps1  typecheck.ps1  update-deps.ps1
src/cognition_lattice/: __init__.py  agent_core.py  agent_runtime_manager.py  agent_sandbox.py  agentfeed_twitter.py  async_echo_agent.py  auth_middleware.py  base_agent.py  cli.py  cli_deploy.py  codex_link.py  config_loader.py  intent_gateway.py  log_config.py  messaging_bus.py  metrics.py  multi_agent_harmonizer.py  proto_validation.py  resource_manager.py  response_store.py  retrovector_bridge.py  schema_registry.py  startup_healthcheck.py  tracing.py  (+2 more)
(+45 files in other folders)
